# Ai-ops

ai-ops-sentry/: .env.example  .gitignore  Makefile  PHASE3_COMPLETE.md  README.md  pyproject.toml  requirements.txt  setup-phase8.sh
ai-ops-sentry/.github/workflows/: ci.yml
ai-ops-sentry/docs/: api-specs.md  architecture.md
ai-ops-sentry/libs/: __init__.py
ai-ops-sentry/libs/core/: __init__.py  config.py
ai-ops-sentry/libs/core/tests/: test_config.py
ai-ops-sentry/libs/monitoring/: __init__.py
ai-ops-sentry/libs/monitoring/tests/: __init__.py
ai-ops-sentry/libs/notifications/: README.md  __init__.py  config.py  models.py  slack_client.py  test_slack_client.py
ai-ops-sentry/services/action-engine/: __init__.py  config.py  main.py  requirements.txt
ai-ops-sentry/services/action-engine/api/: __init__.py  routes.py
ai-ops-sentry/services/action-engine/config/: __init__.py
ai-ops-sentry/services/action-engine/domain/: __init__.py  actions.py  models.py
ai-ops-sentry/services/action-engine/infra/: __init__.py  actions_logger.py  cloud_run_client.py  k8s_client.py
ai-ops-sentry/services/action-engine/tests/: __init__.py  test_action_api.py  test_api.py
ai-ops-sentry/services/anomaly-engine/: __init__.py  demo.py  demo_online_scorer.py  main.py  online_scorer_main.py
ai-ops-sentry/services/anomaly-engine/config/: __init__.py
ai-ops-sentry/services/anomaly-engine/domain/: __init__.py  features.py  scoring.py  trainer.py
ai-ops-sentry/services/anomaly-engine/infra/: __init__.py  anomaly_events_publisher.py  anomaly_writer.py  bq_reader.py  model_store.py  pubsub_subscriber.py
ai-ops-sentry/services/anomaly-engine/offline-trainer/: __init__.py  main.py
ai-ops-sentry/services/anomaly-engine/offline-trainer/api/: __init__.py
ai-ops-sentry/services/anomaly-engine/offline-trainer/config/: __init__.py
ai-ops-sentry/services/anomaly-engine/offline-trainer/domain/: __init__.py
ai-ops-sentry/services/anomaly-engine/offline-trainer/infra/: __init__.py
ai-ops-sentry/services/anomaly-engine/offline-trainer/tests/: __init__.py
ai-ops-sentry/services/anomaly-engine/online-scorer/: __init__.py  main.py
ai-ops-sentry/services/anomaly-engine/online-scorer/api/: __init__.py
ai-ops-sentry/services/anomaly-engine/online-scorer/config/: __init__.py
ai-ops-sentry/services/anomaly-engine/online-scorer/domain/: __init__.py
ai-ops-sentry/services/anomaly-engine/online-scorer/infra/: __init__.py
ai-ops-sentry/services/anomaly-engine/online-scorer/tests/: __init__.py
ai-ops-sentry/services/anomaly-engine/tests/: __init__.py  test_anomaly_scoring.py  test_anomaly_trainer.py  test_features.py
ai-ops-sentry/services/dashboard/: QUICKSTART.md  __init__.py  app.py  main.py
ai-ops-sentry/services/dashboard/api/: __init__.py
ai-ops-sentry/services/dashboard/config/: __init__.py
ai-ops-sentry/services/dashboard/domain/: __init__.py
ai-ops-sentry/services/dashboard/infra/: __init__.py  bq_client.py
ai-ops-sentry/services/dashboard/my-app/: README_INTEGRATION.md  SETUP_NOTES.md  dashboard.tsx  package-lock.json
ai-ops-sentry/services/dashboard/my-app/app/: globals.css  page.tsx
ai-ops-sentry/services/dashboard/my-app/components/: integrated-dashboard.tsx
ai-ops-sentry/services/dashboard/tests/: __init__.py
ai-ops-sentry/services/ingestion-api/: __init__.py  main.py
ai-ops-sentry/services/ingestion-api/api/: __init__.py  routes.py
ai-ops-sentry/services/ingestion-api/config/: __init__.py
ai-ops-sentry/services/ingestion-api/domain/: __init__.py  models.py
ai-ops-sentry/services/ingestion-api/infra/: __init__.py  bq_writer.py  pubsub_publisher.py
ai-ops-sentry/services/ingestion-api/tests/: __init__.py  test_api.py
ai-ops-sentry/services/metrics-collector/: __init__.py  main.py
ai-ops-sentry/services/metrics-collector/api/: __init__.py
ai-ops-sentry/services/metrics-collector/config/: __init__.py
ai-ops-sentry/services/metrics-collector/domain/: __init__.py  metrics.py
ai-ops-sentry/services/metrics-collector/infra/: __init__.py  client.py
ai-ops-sentry/services/metrics-collector/tests/: __init__.py  test_client.py  test_metrics.py  test_metrics_domain.py
